// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Card/> renders correctly if contains CardAreaSide 1`] = `
<div
  className="CardStyled-eliUpK jMAAOR"
  elevation={1}
>
  <div
    className="CardAreaSideStyled-NtxZL bLOuvY"
  />
</div>
`;

exports[`<Card/> renders correctly if prop size changing 1`] = `
<div
  className="CardStyled-eliUpK jMAAOR"
  elevation={1}
>
  <div
    className="CardContentStyled-eXdRtH bOeEQo"
    size="large"
  />
</div>
`;

exports[`<Card/> renders correctly if prop size changing 2`] = `
<div
  className="CardStyled-eliUpK jMAAOR"
  elevation={1}
>
  <div
    className="CardContentStyled-eXdRtH bOeEQo"
    size="xlarge"
  />
</div>
`;

exports[`<Card/> renders correctly with default props 1`] = `
<div
  className="CardStyled-eliUpK jMAAOR"
  elevation={1}
>
  <div>
     test 
  </div>
</div>
`;

exports[`<CardActions/> renders correctly with default props 1`] = `
<div
  className="CardActionsStyled-kvcgrO jTKgwa"
  size="default"
>
  <div>
     test 
  </div>
</div>
`;

exports[`<CardActionsMain/> renders correctly with default props 1`] = `
<div
  className="CardActionsMainStyled-ktQsKf bEsixs"
  size="default"
>
  <div>
     test 
  </div>
</div>
`;

exports[`<CardActionsSupplemental/> renders correctly with default props 1`] = `
<div
  className="CardActionsSupplementalStyled-fhmiiR bqsVkQ"
  size="default"
>
  <div>
     test 
  </div>
</div>
`;

exports[`<CardAreaMain/> renders correctly with default props 1`] = `
<div
  className="CardAreaMainStyled-iFCMnc cfsANX"
>
  <div>
     test 
  </div>
</div>
`;

exports[`<CardAreaSide/> renders correctly with default props 1`] = `
<div
  className="CardAreaSideStyled-NtxZL bLOuvY"
>
  <div>
     test 
  </div>
</div>
`;

exports[`<CardContent/> renders correctly if prop last set false 1`] = `
<div
  className="CardContentStyled-eXdRtH gAThCg"
  size="default"
/>
`;

exports[`<CardContent/> renders correctly if prop last set true 1`] = `
<div
  className="CardContentStyled-eXdRtH fKkFIz"
  size="default"
/>
`;

exports[`<CardContent/> renders correctly with default props 1`] = `
<div
  className="CardContentStyled-eXdRtH gAThCg"
  size="default"
>
  <div>
     test 
  </div>
</div>
`;

exports[`<CardContentText/> renders correctly with default props 1`] = `
<p
  className="CardContentTextStyled-ffrDAG gKKBrF"
  size="default"
>
  <div>
     test 
  </div>
</p>
`;

exports[`<CardHeaderPrimary/> renders correctly if prop subtitle set test 1`] = `
<div
  className="CardHeaderPrimaryStyled-cxPwcz ftRgno"
  size="default"
>
  <div
    className="CardHeaderBoxStyled-gCSNbv hSTMEJ"
  >
    <h2
      className="CardHeaderTextStyled-jvDUSI ddxvKH"
      size="default"
    >
      
    </h2>
    <div
      className="CardSubheaderStyled-eKFNHq Vrcqx"
      size="default"
    >
      test
    </div>
  </div>
</div>
`;

exports[`<CardHeaderPrimary/> renders correctly if prop title set test 1`] = `
<div
  className="CardHeaderPrimaryStyled-cxPwcz ftRgno"
  size="default"
>
  <div
    className="CardHeaderBoxStyled-gCSNbv hSTMEJ"
  >
    <h2
      className="CardHeaderTextStyled-jvDUSI ddxvKH"
      size="default"
    >
      test
    </h2>
  </div>
</div>
`;

exports[`<CardHeaderPrimary/> renders correctly with default props 1`] = `
<div
  className="CardHeaderPrimaryStyled-cxPwcz ftRgno"
  size="default"
>
  <div
    className="CardHeaderBoxStyled-gCSNbv hSTMEJ"
  >
    <h2
      className="CardHeaderTextStyled-jvDUSI ddxvKH"
      size="default"
    >
      
    </h2>
  </div>
  <div
    className="CardHeaderMediaStyled-klkMSH lnxuuS"
    size="default"
  >
    <div>
       test 
    </div>
  </div>
</div>
`;

exports[`<CardHeaderSecondary/> renders correctly if prop image set image.png 1`] = `
<div
  className="CardHeaderSecondaryStyled-hsdLyU hKpXeK"
  size="default"
>
  <div
    className="CardHeaderSecondaryImageStyled-gbNILd ESGYh"
    size="default"
    style={
      Object {
        "backgroundImage": "url('./image.png')",
      }
    }
  />
  <div
    className="CardHeaderSecondaryTextBoxStyled-humbWf iXHTws"
  >
    <div
      className="CardHeaderSecondaryTextStyled-bgnDxl cTtVig"
      size="default"
    >
      
    </div>
  </div>
</div>
`;

exports[`<CardHeaderSecondary/> renders correctly if prop subtitle set test 1`] = `
<div
  className="CardHeaderSecondaryStyled-hsdLyU hKpXeK"
  size="default"
>
  <div
    className="CardHeaderSecondaryTextBoxStyled-humbWf iXHTws"
  >
    <div
      className="CardHeaderSecondaryTextStyled-bgnDxl cTtVig"
      size="default"
    >
      
    </div>
    <div
      className="CardSubheaderSecondaryStyled-bBKUc dKuBEb"
      size="default"
    >
      test
    </div>
  </div>
</div>
`;

exports[`<CardHeaderSecondary/> renders correctly if prop title set test 1`] = `
<div
  className="CardHeaderSecondaryStyled-hsdLyU hKpXeK"
  size="default"
>
  <div
    className="CardHeaderSecondaryTextBoxStyled-humbWf iXHTws"
  >
    <div
      className="CardHeaderSecondaryTextStyled-bgnDxl cTtVig"
      size="default"
    >
      test
    </div>
  </div>
</div>
`;

exports[`<CardHeaderSecondary/> renders correctly with default props 1`] = `
<div
  className="CardHeaderSecondaryStyled-hsdLyU hKpXeK"
  size="default"
>
  <div
    className="CardHeaderSecondaryTextBoxStyled-humbWf iXHTws"
  >
    <div
      className="CardHeaderSecondaryTextStyled-bgnDxl cTtVig"
      size="default"
    >
      
    </div>
  </div>
</div>
`;

exports[`<CardMedia/> renders correctly with default props 1`] = `
<div
  className="CardMediaStyled-jLpMql jZhSKd"
>
  <div
    className="CardMediaContentStyled-cSPPsn blPfCk"
  >
    <div>
       test 
    </div>
  </div>
</div>
`;
